Issue #19188: fix compilation comments to Java25 and add CI check to prevent Java21 comments